Infra/terraform/modules/network/main.tf
resource "aws_vpc" "main"{
    cidr_block = var.vpc_cidr
    enable_dns_support = true
    enable_dns_hostnames = true
    tags = {Name = "$(var.project_name)-vpc"}
}

resource "aws_subnet" "public"{
    count = 2
    vpc_id = aws_vpc.main.id
    cidr_block = cidrsubnet(var.vpc_cidr,8,count.index)
    availability_zone = "us-east-1${element(["a", "b"], count.index)}"
    map_public_ip_on_launch = true
    tags = {Name = "${var.project_name}-public-${count.index}"}
}

resource "aws_subnet" "private" {
    count = 2
    vpc_id = aws_vpc.main.id
    cidr_block = cidrsubnet(var.vpc_cidr, 8, count.index + 2)
    availability_zone = "us-east-1${element(["a", "b"], count.index)}"
    tags = { Name = "${var.project_name}-private-${count.index}" }
}

resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.main.id
    tags = { Name = "${var.project_name}-igw" }
}

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.main.id
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id
        }
    tags = { Name = "${var.project_name}-public-rt" }
}

resource "aws_route_table_association" "public" {
    count = 2
    subnet_id = aws_subnet.public[count.index].id
    route_table_id = aws_route_table.public.id
}

resource "aws_nat_gateway" "main" {
    allocation_id = aws_eip.nat.id
    subnet_id = aws_subnet.public[0].id
    tags = { Name = "${var.project_name}-nat" }
}

resource "aws_eip" "nat" {
    domain = "vpc"
}

resource "aws_route_table" "private" {
    vpc_id = aws_vpc.main.id
    route {
        cidr_block = "0.0.0.0/0"
        nat_gateway_id = aws_nat_gateway.main.id
        }
    tags = { Name = "${var.project_name}-private-rt" }
}

resource "aws_route_table_association" "private" {
    count = 2
    subnet_id = aws_subnet.private[count.index].id
    route_table_id = aws_route_table.private.id
}

output "vpc_id" {
    value = aws_vpc.main.id
}

output "public_subnet_ids" {
    value = aws_subnet.public[*].id
}

output "private_subnet_ids" {
    value = aws_subnet.private[*].id
}
